2005-08-04 16:05 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) refactored to
	test face0 and face1 subfaces independently.

2005-08-04 14:20 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) return EMPTY
	without calls to gridRemoveCellsOutsideOfFaces if new surface
	faces do not exist in volume grid (to aid debugging).

2005-08-04 12:47 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridThreadCurveThroughVolume) logic bug that
	prevented an attempt at splitting a face.
	* src/gridinsert.c (gridSplitCellAt) Fixed bug that put subdivided
	cell0 in twice instead of cell0 and cell1.

2005-08-03 16:20 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitFaceAt,gridSplitCellAt) added
	gridSetAuxToAverageOfNodes3,gridSetAuxToAverageOfNodes4,
	gridSetMapMatrixToAverageOfNodes3,gridSetMapMatrixToAverageOfNodes4
	calls to have reasonable map value durring adaptation.

2005-08-03 16:06 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridSetAuxToAverageOfNodes2,gridSetAuxToAverageOfNodes3,
	gridSetAuxToAverageOfNodes4) created from gridSetAuxToAverageOfNodes
	* src/gridmetric.c (gridSetMapMatrixToAverageOfNodes2,
	gridSetMapMatrixToAverageOfNodes3,gridSetMapMatrixToAverageOfNodes4)
	created from gridSetMapMatrixToAverageOfNodes

2005-08-03 15:36 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridRemoveCellsOutsideOfFaces) completed, and
	the grid is complete.

2005-08-03 12:36 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridRemoveCellsOutsideOfFaces) started method
	to remove all the cells outside of the current faces.

2005-08-03 10:41 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) reject
	ContinuousEquator or missing faces.

2005-08-03 10:19 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridThreadCurveThroughVolume) returns the next
	node along the curve, which is n1 if edge n0 n1 exists or newly