@@ -1,3 +1,10 @@
+2005-08-05 09:00 Mike Park  <mike.park@nasa.gov>
+
+	* src/ring.c (ringCreate,ringFree) created new object to keep
+	track of a continuous loop of linear segements on a geometry face
+	that is meshed by filling with triangles.
+	* src/ring.c (ringSegments,ringTriangles) return total counts.
+
 2005-08-04 16:05 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridinsert.c (gridReconstructSplitEdgeRatio) refactored to
